--- a/WebContent/inputForm.css
+++ b/WebContent/inputForm.css
@@ -18,6 +18,7 @@ body {
 .glass {
     background-color: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(20px);
+    --webkit-backdrop-filter: blur(20px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.35);
     border: 1px solid white;
 }
